# json_cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md  example.json
.github/workflows/: ci.yml
src/: main.rs
src/domain/: json_cleaner.rs  mod.rs
src/infrastructure/: file_io.rs
src/usecase/: clean_json_usecase.rs  mod.rs
tests/: main_test.rs
