[package]
name = "json_cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Malo Winrhy <your_email@example.com>"]
description = "A CLI tool to clean JSON files from null/empty values."
license = "MIT"
repository = "https://github.com/MaloWinrhy/json_cleaner"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

